swagger modified and promise problem solved
